// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-dropdown #render should render as expected with gux-option 1`] = `
<gux-dropdown lang="en" value="j" role="listbox">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-popup>
      <div class="gux-target-container-not-filterable" slot="target">
        <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
          <div class="gux-field-content">
            <div class="gux-placeholder">
              Select...
            </div>
          </div>
          <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
          </gux-icon>
        </button>
      </div>
      <slot slot="popup">
      </slot>
    </gux-popup>
  </template>
  <gux-listbox aria-label="Animals" role="listbox" tabindex="0">
    <template shadowrootmode="open">
      <slot>
      </slot>
    </template>
    <gux-option value="a" id="gux-option-i" role="option" class="gux-show-subtext" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Ant
      <span slot="subtext">
        Small
      </span>
    </gux-option>
    <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Bat
    </gux-option>
    <gux-option value="c" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Cat
    </gux-option>
    <gux-option value="d" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Dog
    </gux-option>
    <gux-option value="e" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Eel
    </gux-option>
    <gux-option value="f" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Frog
    </gux-option>
    <gux-option value="g" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Goat
    </gux-option>
    <gux-option value="h" id="gux-option-i" role="option" class="gux-show-subtext" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Horse
      <span slot="subtext">
        Large
      </span>
    </gux-option>
    <gux-option value="i" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Ibis
    </gux-option>
  </gux-listbox>
</gux-dropdown>
`;

exports[`gux-dropdown #render should render as expected with gux-option whose slotted content includes whitespace 1`] = `
<gux-dropdown lang="en" value="f" role="listbox">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-popup>
      <div class="gux-target-container-not-filterable" slot="target">
        <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
          <div class="gux-field-content">
            <div class="gux-selected-option">
              <gux-truncate dir="auto">
                Frog
              </gux-truncate>
            </div>
          </div>
          <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
          </gux-icon>
        </button>
      </div>
      <slot slot="popup">
      </slot>
    </gux-popup>
  </template>
  <gux-listbox aria-label="Animals" role="listbox" tabindex="0">
    <template shadowrootmode="open">
      <slot>
      </slot>
    </template>
    <gux-option value="e" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Eel
    </gux-option>
    <gux-option value="f" id="gux-option-i" role="option" class="gux-selected gux-show-subtext" aria-selected="true" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>
      <span>
        Frog
      </span>
      <span slot="subtext">
        Amphibian
      </span>
    </gux-option>
    <gux-option value="g" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Goat
    </gux-option>
  </gux-listbox>
</gux-dropdown>
`;

exports[`gux-dropdown #render should render as expected with gux-option-group and gux-option 1`] = `
<gux-dropdown lang="en" value="f" role="listbox">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-popup>
      <div class="gux-target-container-not-filterable" slot="target">
        <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
          <div class="gux-field-content">
            <div class="gux-selected-option">
              <gux-truncate dir="auto">
                Frog
              </gux-truncate>
            </div>
          </div>
          <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
          </gux-icon>
        </button>
      </div>
      <slot slot="popup">
      </slot>
    </gux-popup>
  </template>
  <gux-listbox aria-label="Animals" role="listbox" tabindex="0">
    <template shadowrootmode="open">
      <slot>
      </slot>
    </template>
    <gux-option-group-beta label="Group 1">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 1
          </div>
          <div role="group">
            <slot>
            </slot>
          </div>
          <gux-list-divider>
          </gux-list-divider>
        </div>
      </template>
      <gux-option value="a" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ant
      </gux-option>
      <gux-option value="b" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Bat
      </gux-option>
      <gux-option value="c" disabled="" id="gux-option-i" role="option" class="gux-disabled" aria-disabled="true">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Cat
      </gux-option>
      <gux-option value="d" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Dog
      </gux-option>
    </gux-option-group-beta>
    <gux-option-group-beta label="Group 2">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 2
          </div>
          <div role="group">
            <slot>
            </slot>
          </div>
          <gux-list-divider>
          </gux-list-divider>
        </div>
      </template>
      <gux-option value="e" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Eel
      </gux-option>
      <gux-option value="f" id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Frog
      </gux-option>
      <gux-option value="g" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Goat
      </gux-option>
    </gux-option-group-beta>
    <gux-option-group-beta label="Group 3">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 3
          </div>
          <div role="group">
            <slot>
            </slot>
          </div>
          <gux-list-divider>
          </gux-list-divider>
        </div>
      </template>
      <gux-option value="h" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Horse
      </gux-option>
      <gux-option value="i" id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Ibis
      </gux-option>
    </gux-option-group-beta>
  </gux-listbox>
</gux-dropdown>
`;

exports[`gux-dropdown #render should render as expected with gux-option-group and gux-option-icon 1`] = `
<gux-dropdown lang="en" value="f" role="listbox">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-popup>
      <div class="gux-target-container-not-filterable" slot="target">
        <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
          <div class="gux-field-content">
            <div class="gux-placeholder">
              Select...
            </div>
          </div>
          <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
          </gux-icon>
        </button>
      </div>
      <slot slot="popup">
      </slot>
    </gux-popup>
  </template>
  <gux-listbox aria-label="Animals" role="listbox" tabindex="0">
    <template shadowrootmode="open">
      <slot>
      </slot>
    </template>
    <gux-option-group-beta label="Group 1">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 1
          </div>
          <div role="group">
            <slot>
            </slot>
          </div>
          <gux-list-divider>
          </gux-list-divider>
        </div>
      </template>
      <gux-option-icon icon-name="user" icon-color="var(--gux-blue-60)" value="leonardo" id="gux-option-icon-i" role="option" class="gux-show-subtext" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <gux-icon decorative="" icon-name="user" size="small" style="color: var(--gux-blue-60);">
          </gux-icon>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Leonardo
        <span slot="subtext">
          TMNT
        </span>
      </gux-option-icon>
      <gux-option-icon icon-name="user" icon-color="#8452cf" value="donatello" id="gux-option-icon-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <gux-icon decorative="" icon-name="user" size="small" style="color: #8452cf;">
          </gux-icon>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Donatello
      </gux-option-icon>
    </gux-option-group-beta>
    <gux-option-group-beta label="Group 2">
      <template shadowrootmode="open">
        <div class="gux-option-group">
          <div class="gux-option-group-label" role="presentation">
            Group 2
          </div>
          <div role="group">
            <slot>
            </slot>
          </div>
          <gux-list-divider>
          </gux-list-divider>
        </div>
      </template>
      <gux-option-icon icon-name="user" icon-color="rgb(234, 11, 11)" value="raphael" id="gux-option-icon-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <gux-icon decorative="" icon-name="user" size="small" style="color: rgb(234, 11, 11);">
          </gux-icon>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Raphael
      </gux-option-icon>
      <gux-option-icon icon-name="user" icon-color="#e08915" icon-sr-text="Screenreader information about the icon goes here, if needed" value="michelangelo" id="gux-option-icon-i" role="option" aria-selected="false" aria-disabled="false">
        <template shadowrootmode="open">
          <gux-icon screenreader-text="Screenreader information about the icon goes here, if needed" icon-name="user" size="small" style="color: #e08915;">
          </gux-icon>
          <div class="gux-option-wrapper">
            <gux-truncate tooltip-placement="right">
              <slot>
              </slot>
            </gux-truncate>
            <slot name="subtext">
            </slot>
          </div>
        </template>Michelangelo
      </gux-option-icon>
    </gux-option-group-beta>
  </gux-listbox>
</gux-dropdown>
`;

exports[`gux-dropdown #render should render as expected with gux-option-icon 1`] = `
<gux-dropdown lang="en" value="j" role="listbox">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <gux-popup>
      <div class="gux-target-container-not-filterable" slot="target">
        <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
          <div class="gux-field-content">
            <div class="gux-placeholder">
              Select...
            </div>
          </div>
          <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
          </gux-icon>
        </button>
      </div>
      <slot slot="popup">
      </slot>
    </gux-popup>
  </template>
  <gux-listbox aria-label="Animals" role="listbox" tabindex="0">
    <template shadowrootmode="open">
      <slot>
      </slot>
    </template>
    <gux-option-icon icon-name="user" icon-color="var(--gux-blue-60)" value="leonardo" id="gux-option-icon-i" role="option" class="gux-show-subtext" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <gux-icon decorative="" icon-name="user" size="small" style="color: var(--gux-blue-60);">
        </gux-icon>
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Leonardo
      <span slot="subtext">
        TMNT
      </span>
    </gux-option-icon>
    <gux-option-icon icon-name="user" icon-color="#8452cf" value="donatello" id="gux-option-icon-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <gux-icon decorative="" icon-name="user" size="small" style="color: #8452cf;">
        </gux-icon>
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Donatello
    </gux-option-icon>
    <gux-option-icon icon-name="user" icon-color="rgb(234, 11, 11)" value="raphael" id="gux-option-icon-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <gux-icon decorative="" icon-name="user" size="small" style="color: rgb(234, 11, 11);">
        </gux-icon>
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Raphael
    </gux-option-icon>
    <gux-option-icon icon-name="user" icon-color="#e08915" icon-sr-text="Screenreader information about the icon goes here, if needed" value="michelangelo" id="gux-option-icon-i" role="option" aria-selected="false" aria-disabled="false">
      <template shadowrootmode="open">
        <gux-icon screenreader-text="Screenreader information about the icon goes here, if needed" icon-name="user" size="small" style="color: #e08915;">
        </gux-icon>
        <div class="gux-option-wrapper">
          <gux-truncate tooltip-placement="right">
            <slot>
            </slot>
          </gux-truncate>
          <slot name="subtext">
          </slot>
        </div>
      </template>Michelangelo
    </gux-option-icon>
  </gux-listbox>
</gux-dropdown>
`;
